# crucible-ewm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  release_sweep.sh  requirements.txt
dashboard/: BACKLOG.md  app.py
dashboard/pages/: _shared.py  artifacts.py  chart.py  experiment.py  trajectory.py
docs/: architecture.md  experiments.md  how-to-run.md  learning.md
ewm_core/agent/: __init__.py  policy_guided_agent.py
ewm_core/agentcore_loop/: __init__.py  run.py
ewm_core/agentcore_memory/: __init__.py  store.py
ewm_core/agentcore_tools/: __init__.py  registry.py  runtime.py  types.py
ewm_core/agents/: __init__.py  llm_agent.py
ewm_core/artifacts/: __init__.py  writer.py
ewm_core/broker/: __init__.py  base.py  paper.py
ewm_core/deltas/: compute.py
ewm_core/environment/: trading_env.py
ewm_core/eval/: __init__.py  experiment_evaluator.py  run_evaluator.py
ewm_core/execution/: execute.py
ewm_core/explain/: explain.py
ewm_core/learning/: dataset_export.py  replay.py
ewm_core/loop/: __init__.py  formatting.py  ledger.py  run.py  types.py
ewm_core/market/: generator.py  synthetic.py
ewm_core/observability/: __init__.py  tape.py
ewm_core/persistence/: __init__.py  runs_dynamo.py  stores.py
ewm_core/planner/: base.py  bedrock.py  local_planner.py  mock.py  run.py  types.py
ewm_core/simulator/: simulate.py
ewm_core/strategy/: __init__.py  evaluate.py  load.py
ewm_core/transitions/: apply.py
ewm_core/verifier/: verify.py
examples/fixtures/: trading_environment_path.json
outputs/learning/: demo_learning_report.json  demo_trajectories.jsonl  evidence_policy.json
scripts/: build_evidence_policy.py  demo_agentcore_loop.py  demo_end_to_end_learning_loop.py  demo_learning_loop.py  demo_llm_agent.py  demo_policy_feedback_loop.py  demo_policy_guided_trading_agent.py  demo_trading_environment.py  export_learning_dataset.py  generate_all_figures.py  plot_experiment.py  replay_executions.py  run_learning_stub.py  smoke_agentcore_hello.py  smoke_agentcore_loop.py  smoke_health.py  verify_observability_v0_8_2_1.py  verify_release.sh
scripts/diagrams/: generate_agent_experiment_diagram.py  generate_agent_stack_diagram.py  generate_tools_vs_environment_diagram.py
services/cli/: check.py  config.py  cost.py  evaluate.py  main.py  mode.py  runs.py
services/core/: errors.py
tests/contract/: test_api_contract.py
(+131 files in other folders)
