[project]
name = "ewm-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
aws = [
  "boto3",
]
dev = [
  "pytest",
  "ruff",
  "boto3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ewm_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/integration --ignore=tests/contract"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
