[project]
name = "ewm-core"
version = "0.1.0"
description = "Observable trajectory infrastructure — trading domain reference implementation"
readme = "README.md"
license = "MIT"
authors = [{ name = "MaverickHQ", email = "MaverickHQ@users.noreply.github.com" }]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "pydantic>=2.0",
  "numpy>=1.26",
  "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/MaverickHQ/crucible-ewm"
Repository = "https://github.com/MaverickHQ/crucible-ewm"

[project.optional-dependencies]
aws = [
  "boto3",
]
dashboard = [
  "streamlit>=1.35",
  "plotly>=5.20",
  "yfinance>=0.2",
]
dev = [
  "pytest",
  "ruff",
  "boto3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ewm_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/integration --ignore=tests/contract"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
